# order-terminal

./: .gitignore  Analyse  bun.lockb  capacitor.config.ts  components.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: publish.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/types/: route_meta_data.json
android/: capacitor.settings.gradle
android/app/: capacitor.build.gradle
src/: app.scss
src-tauri/: Cargo.toml  export_daten.csv  export_einstellungen.csv  releases.tauri.json  tauri.conf.json
src-tauri/entities/: Cargo.toml
src-tauri/entities/src/: lib.rs  products.rs  purchases.rs  records.rs  time_records.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  main.rs
src-tauri/migration/src/migrator/: m20240414_001_products.rs  m20240414_002_records.rs  m20240414_003_purchases.rs  mod.rs
src-tauri/services/: Cargo.toml
src-tauri/services/src/: lib.rs  product.rs  record.rs
src-tauri/src/: main.rs
src/lib/components/: AppInitializer.svelte
src/lib/database/: ProductService.ts  PurchaseRecordsService.ts  database.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  products.store.ts  purchases.store.ts
src/routes/auswertung/: +page.svelte  echarts.ts
src/routes/einstellungen/: +page.svelte
src/routes/erfassung/: +layout.svelte  warenkorb.store.ts
src/routes/kasse/: +layout.svelte  +page.svelte  Item.ts  stores.ts  warenkorb.store.ts
src/routes/produkte/: +layout.svelte  +page.svelte  AddCard.svelte  EditCard.svelte
(+122 files in other folders)
