[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.35.0", features = [
    "serde-with-arbitrary-precision",
] }
sea-orm = "0.12.15"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.37"
