[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
entities = { path = "../entities" }
sea-orm = "0.12.15"
chrono = { version = "0.4.37", features = ["serde"] }
